# osu-lazer-scrobbler

./: Cargo.toml
src/: lookout.rs  main.rs  osu.rs  scrobbler.rs
