[package]
name = "osu-lazer-scrobbler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linemux = "0.3.0"
regex = "1.10.6"
reqwest = "0.12.7"
rosu-v2 = "0.9.0"
rustfm-scrobble = "1.1.1"
serde = "1.0.210"
sysinfo = "0.31.4"
tokio = { version = "1.40.0", features = ["full"] }
